[rebootcontrol] this time with correct modul-tag in front. Changed buttons so that they don't open the modals to reboot/shutdown if user has no permission. Deleted some redundancy from stylesheet

--- a/modules-available/rebootcontrol/style.css
+++ b/modules-available/rebootcontrol/style.css
@@ -16,11 +16,8 @@
     margin-bottom: 0;
 }
 
-#rebootButton, #settingsButton, #selectAllButton, #unselectAllButton {
+.controlButtons {
     margin-left: 10px;
-}
-
-#rebootButton, #shutdownButton, #selectAllButton, #unselectAllButton {
     width: 140px;
 }
 
