--- a/modules-available/statistics/templates/clientlist.html
+++ b/modules-available/statistics/templates/clientlist.html
@@ -11,27 +11,27 @@
 			<td></td>
 			<td class="text-right">
 				<button type="button" class="btn btn-default btn-xs" onclick="popupFilter('lastseen')">
-					<span id="btn_filter_lastseen" class="glyphicon glyphicon-filter"></span>
+					<span class="glyphicon glyphicon-filter"></span>
 				</button>
 			</td>
 			<td>
 				<button type="button" class="btn btn-default btn-xs" onclick="popupFilter('kvmstate')">
-					<span id="btn_filter_kvmstate" class="glyphicon glyphicon-filter"></span>
+					<span class="glyphicon glyphicon-filter"></span>
 				</button>
 			</td>
 			<td class="text-right">
 				<button type="button" class="btn btn-default btn-xs" onclick="popupFilter('gbram')">
-					<span id="btn_filter_gbram" class="glyphicon glyphicon-filter"></span>
+					<span class="glyphicon glyphicon-filter"></span>
 				</button>
 			</td>
 			<td class="text-right">
 				<button type="button" class="btn btn-default btn-xs" onclick="popupFilter('hddgb')">
-					<span id="btn_filter_hddgb" class="glyphicon glyphicon-filter"></span>
+					<span class="glyphicon glyphicon-filter"></span>
 				</button>
 			</td>
 			<td>
-				<button class="btn btn-default btn-xs" onclick="popupFilter('realcores')">
-					<span id="btn_filter_cpu" class="glyphicon glyphicon-filter"></span>
+				<button type=button" class="btn btn-default btn-xs" onclick="popupFilter('realcores')">
+					<span class="glyphicon glyphicon-filter"></span>
 				</button>
 			</td>
 		</tr>
