[statistics] Fix typo in last commit

--- a/modules-available/statistics/templates/clientlist.html
+++ b/modules-available/statistics/templates/clientlist.html
@@ -30,7 +30,7 @@
 				</button>
 			</td>
 			<td>
-				<button type=button" class="btn btn-default btn-xs" onclick="popupFilter('realcores')">
+				<button type="button" class="btn btn-default btn-xs" onclick="popupFilter('realcores')">
 					<span class="glyphicon glyphicon-filter"></span>
 				</button>
 			</td>
