[runmode] Do not allow re-assigning clients to new runmode if old mode doesn't support the generic editor
Doing so might leave some stale data in the old module, so we
better prevent it so the user has to manually remove the client
from the old runmode using the non-generic way (module specific)
first.

--- a/modules-available/runmode/templates/module-machine-list.html
+++ b/modules-available/runmode/templates/module-machine-list.html
@@ -41,8 +41,8 @@
 					</button>
 					{{/canedit}}
 					{{#deleteUrl}}
-					<a class="btn btn-danger btn-sm" href="?do={{module}}&amp;{{deleteUrl}}{{modeid}}">
-						<span class="glyphicon glyphicon-trash"></span>
+					<a class="btn btn-default btn-sm" href="?do={{module}}&amp;{{deleteUrl}}{{modeid}}">
+						<span class="glyphicon glyphicon-edit"></span>
 					</a>
 					{{/deleteUrl}}
 				</td>
