--- a/modules-available/systemstatus/templates/_page.html
+++ b/modules-available/systemstatus/templates/_page.html
@@ -86,7 +86,7 @@
 						<form class="form-adduser" action="?do=SystemStatus" method="post">
 							<input type="hidden" name="token" value="{{token}}">
 							<input type="hidden" name="action" value="reboot">
-							<button class="btn btn-warning" type="button" data-toggle="modal" data-target="#rebootServerModal"><span class="glyphicon glyphicon-repeat"></span> {{lang_serverReboot}}</button>
+							<button {{^allowedToReboot}}disabled{{/allowedToReboot}} class="btn btn-warning" type="button" data-toggle="modal" data-target="#rebootServerModal"><span class="glyphicon glyphicon-repeat"></span> {{lang_serverReboot}}</button>
 
 
 							<div class ="modal fade" id="rebootServerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
