--- a/modules-available/locationinfo/templates/page-servers.html
+++ b/modules-available/locationinfo/templates/page-servers.html
@@ -60,7 +60,7 @@
 			<div class="modal-footer">
 				<button type="submit" id="myModalSubmitButton" class="btn btn-primary" form="">{{lang_save}}</button>
 
-				<a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a>
+				<a class="btn btn-default" data-dismiss="modal">{{lang_close}}</a>
 			</div>
 		</div>
 
