--- a/modules-available/locationinfo/templates/page-config-panel-default.html
+++ b/modules-available/locationinfo/templates/page-config-panel-default.html
@@ -28,9 +28,9 @@
 									<input class="form-control" name="name" id="panel-title" type="text" value="{{panelname}}">
 								</div>
 								<div class="col-sm-2">
-									<a class="btn btn-default helptext" title="{{lang_displayNameTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_displayNameTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
-									</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -48,9 +48,9 @@
 									</select>
 								</div>
 								<div class="col-sm-2">
-									<a class="btn btn-default helptext" title="{{lang_languageTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_languageTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
-									</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -69,9 +69,9 @@
 									</select>
 								</div>
 								<div class="col-sm-2">
-									<a class="btn btn-default helptext" title="{{lang_modeTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_modeTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
-									</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -85,9 +85,9 @@
 									<input id="input-eco" type="checkbox" name="eco" {{eco_checked}}>
 								</div>
 								<div class="col-sm-2">
-									<a class="btn btn-default helptext" title="{{lang_ecoTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_ecoTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
-									</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -101,9 +101,9 @@
 									<input id="input-prettytime" type="checkbox" name="prettytime" {{prettytime_checked}}>
 								</div>
 								<div class="col-sm-2">
-									<a class="btn btn-default helptext" title="{{lang_prettytimeTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_prettytimeTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
-									</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -128,9 +128,9 @@
 											 max="1440" value="{{calupdate}}" required>
 								</div>
 								<div class="col-sm-2">
-									<a class="btn btn-default helptext" title="{{lang_calupdateTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_calupdateTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
-									</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -145,9 +145,9 @@
 											 max="86400" value="{{roomupdate}}" required>
 								</div>
 								<div class="col-sm-2">
-									<a class="btn btn-default helptext" title="{{lang_roomupdateTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_roomupdateTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
-									</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -177,9 +177,9 @@
 										<input id="input-vertical" type="checkbox" name="vertical" {{vertical_checked}}>
 									</div>
 									<div class="col-sm-2">
-										<a class="btn btn-default helptext" title="{{lang_verticalTooltip}}">
+										<p class="btn btn-static helptext" title="{{lang_verticalTooltip}}">
 											<span class="glyphicon glyphicon-question-sign"></span>
-										</a>
+										</p>
 									</div>
 								</div>
 							</div>
@@ -193,9 +193,9 @@
 										<input id="scaledaysauto" type="checkbox" name="scaledaysauto" {{scaledaysauto_checked}}>
 									</div>
 									<div class="col-sm-2">
-										<a class="btn btn-default helptext" title="{{lang_autoscaleTooltip}}">
+										<p class="btn btn-static helptext" title="{{lang_autoscaleTooltip}}">
 											<span class="glyphicon glyphicon-question-sign"></span>
-										</a>
+										</p>
 									</div>
 								</div>
 							</div>
@@ -217,9 +217,9 @@
 										</select>
 									</div>
 									<div class="col-sm-2">
-										<a class="btn btn-default helptext" title="{{lang_daysToShowTooltip}}">
+										<p class="btn btn-static helptext" title="{{lang_daysToShowTooltip}}">
 											<span class="glyphicon glyphicon-question-sign"></span>
-										</a>
+										</p>
 									</div>
 								</div>
 							</div>
@@ -238,9 +238,9 @@
 										</select>
 									</div>
 									<div class="col-sm-2">
-										<a class="btn btn-default helptext" title="{{lang_rotationTooltip}}">
+										<p class="btn btn-static helptext" title="{{lang_rotationTooltip}}">
 											<span class="glyphicon glyphicon-question-sign"></span>
-										</a>
+										</p>
 									</div>
 								</div>
 							</div>
@@ -255,9 +255,9 @@
 										<input id="input-scale" name="scale" type="range" step="1" min="10" max="90" value="{{scale}}">
 									</div>
 									<div class="col-sm-2">
-										<a class="btn btn-default helptext" title="{{lang_scaleTooltip}}">
+										<p class="btn btn-static helptext" title="{{lang_scaleTooltip}}">
 											<span class="glyphicon glyphicon-question-sign"></span>
-										</a>
+										</p>
 									</div>
 								</div>
 							</div>
@@ -272,9 +272,9 @@
 										<input id="input-switchtime" name="switchtime" type="range" step="1" min="1" max="120" value="{{switchtime}}">
 									</div>
 									<div class="col-sm-2">
-										<a class="btn btn-default helptext" title="{{lang_switchTimeTooltip}}">
+										<p class="btn btn-static helptext" title="{{lang_switchTimeTooltip}}">
 											<span class="glyphicon glyphicon-question-sign"></span>
-										</a>
+										</p>
 									</div>
 								</div>
 							</div>
@@ -338,7 +338,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	var $locInput = $('#locationids');
 
 	// Initialize fancy tooltips
-	$('a.helptext').tooltip();
+	$('p.helptext').tooltip();
 	// Add listener to range sliders so their label can be updated
 	$('input[type="range"]').change(function () {
 		$(this).siblings().find('.range-display').text($(this).val());
