--- a/modules-available/locationinfo/templates/page-locations.html
+++ b/modules-available/locationinfo/templates/page-locations.html
@@ -50,7 +50,7 @@
 				<div class="modal-body"></div>
 				<div class="modal-footer">
 					<button type="submit" class="btn btn-primary">{{lang_save}}</button>
-					<a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a>
+					<a class="btn btn-default" data-dismiss="modal">{{lang_close}}</a>
 				</div>
 			</form>
 		</div>
