--- a/modules-available/locationinfo/templates/server-prop-bool.html
+++ b/modules-available/locationinfo/templates/server-prop-bool.html
@@ -7,9 +7,9 @@
 		</div>
 		<div class="col-md-2">
 			{{#helptext}}
-				<a class="btn btn-default" title="{{helptext}}">
+				<p class="btn btn-static" title="{{helptext}}">
 					<span class="glyphicon glyphicon-question-sign"></span>
-				</a>
+				</p>
 			{{/helptext}}
 		</div>
 	</div>
