--- a/modules-available/syslog/templates/page-syslog.html
+++ b/modules-available/syslog/templates/page-syslog.html
@@ -1,3 +1,6 @@
+<button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#modal-settings">
+	<span class="glyphicon glyphicon-cog"></span> {{lang_settings}}
+</button>
 <h1>{{lang_clientLog}}</h1>
 <style type="text/css">
 	.selectize-dropdown {
@@ -71,6 +74,29 @@
 				<pre id="details-body"></pre>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div id="modal-settings" class="modal fade" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<form method="post" action="?do=syslog">
+				<input type="hidden" name="token" value="{{token}}">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title"><b>{{lang_settings}}</b></h4>
+				</div>
+				<div class="modal-body">
+					<p>{{lang_anonDaysDescription}}</p>
+					<input type="number" name="anondays" value="{{anondays}}" min="0" max="180">
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
+					<button type="submit" class="btn btn-primary">{{lang_save}}</button>
+				</div>
+			</form>
+		</div>
+
 	</div>
 </div>
 
