[exams] Fix table design

--- a/modules-available/exams/templates/page-exams.html
+++ b/modules-available/exams/templates/page-exams.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="panel-body">
 		<div class="slx-space">
-			<table class="table table-bordered stupidtable">
+			<table class="table stupidtable">
 				<thead>
 					<tr>
 						<th data-sort="int">{{lang_id}}</th>
