--- a/modules-available/permissionmanager/style.css
+++ b/modules-available/permissionmanager/style.css
@@ -55,28 +55,28 @@
     background-color: rgba(0, 182, 41, 0.23);
 }
 
-.tree-container {
-    -moz-column-gap: 20px;
-    -webkit-column-gap: 20px;
-    column-gap: 20px;
-}
-
-
 .tree-container > ul {
     display: inline-block;
     width: 100%;
     padding: 0;
 }
 
-@media (max-width: 767px) {
-    .tree-container {
-        -moz-column-count: 1;
-        -webkit-column-count: 1;
-        column-count: 1;
-    }
+.tree-container > ul > li > div > label {
+    font-weight: bold;
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+.tree-container {
+    -moz-column-gap: 20px;
+    -webkit-column-gap: 20px;
+    column-gap: 20px;
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+@media (min-width: 768px) {
     .tree-container {
         -moz-column-count: 2;
         -webkit-column-count: 2;
