--- a/modules-available/permissionmanager/templates/treenode.html
+++ b/modules-available/permissionmanager/templates/treenode.html
@@ -1,11 +1,14 @@
 {{#toplevel}}<ul>{{/toplevel}}
-	<li title="{{description}}" data-toggle="tooltip" data-placement="left">
-		<div class='checkbox'>
-			<input id="{{id}}" name="{{checkboxname}}[]" value="{{id}}" type="checkbox" class="form-control" {{#selected}}checked{{/selected}}>
-			<label for="{{id}}">{{#toplevel}}<b>{{/toplevel}}{{name}}{{#toplevel}}</b>{{/toplevel}}</label>
-		</div>
-		<ul>
-			{{{HTML}}}
-		</ul>
-	</li>
+<li title="{{description}}" data-toggle="tooltip" data-placement="left">
+	<div class='checkbox'>
+		<input id="{{id}}" name="{{checkboxname}}[]" value="{{id}}" type="checkbox" class="form-control" {{#selected}}checked{{/selected}}>
+		<label for="{{id}}">
+			{{name}}
+			{{#location-aware}}<span class="glyphicon glyphicon-home text-muted"></span>{{/location-aware}}
+		</label>
+	</div>
+	<ul>
+		{{{HTML}}}
+	</ul>
+</li>
 {{#toplevel}}</ul>{{/toplevel}}
