--- a/modules-available/permissionmanager/templates/treepanel.html
+++ b/modules-available/permissionmanager/templates/treepanel.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="panel-body">
-		<div class="tree-container" style="padding-left: 20px; padding-right: 20px;">
+		<div class="tree-container">
 			{{{HTML}}}
 		</div>
 	</div>
