[default.css] Fix style of labels in input-group-addon

--- a/style/default.css
+++ b/style/default.css
@@ -604,3 +604,8 @@ div.disabled input, div.disabled label {
 	pointer-events: none;
 	cursor: not-allowed;
 }
+
+.input-group-addon > label {
+	font-weight: normal;
+	margin-bottom: inherit;
+}
