[default.css] Fix panel heading bg-img being applied for all panel styles
Should only override bg for default panel

--- a/style/default.css
+++ b/style/default.css
@@ -7,7 +7,7 @@ body {
   padding-bottom: 10px;
 }
 
-.panel-heading, .panel-footer, .jumbotron, pre, .input-group-addon {
+.panel-default > .panel-heading, .panel-footer, .jumbotron, pre, .input-group-addon {
   background-image: url('bg.png');
 }
 
